button not showing bug

--- a/public/videostyle.css
+++ b/public/videostyle.css
@@ -4,11 +4,14 @@
   box-sizing: border-box;
   overflow: hidden;
 }
-
+html,
+body {
+  height: 100%;
+}
 #video-grid {
   /* width: 1075px; */
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgb(56, 56, 56);
   display: grid;
   grid-template-columns: auto auto auto;
@@ -28,10 +31,11 @@ video {
 }
 .container {
   display: flex;
+  height: 100%;
 }
 .chat {
   background-color: rgb(38, 38, 38);
-  height: 100vh;
+  height: 100%;
   width: 464px;
   overflow: scroll;
   position: relative;
